# Engineering-Database

./: .gitignore  README.md  gui.py  modern_app.py  motherbrain.manifest  motherbrain.py  motherbrain.spec  occhialini.spec  platform_gui.py  requirements-desktop.txt  sync_client.py  sync_server.py  web_companion.py  workstation.py
.github/workflows/: pages.yml
core/: __init__.py  auth.py  context.py  devices.py  discovery.py  flywheel.py  inference.py  isaac_sim.py  model_catalog.py  model_download.py  models.py  paths.py  peer_auth.py  sync.py  sync_service.py  tools.py  vault_index.py  web_companion.py
docs/: website_prompt.md
isaac_sim/: __init__.py  bridge_server.py  run_with_isaac.py
kernel/: .CMakeLists.txt.swp  CMakeLists.txt
kernel/include/ai/: inference_engine.hpp
kernel/include/ipc/: message_bus.hpp  message_protocol.hpp
kernel/include/vault/: vault_manager.hpp
kernel/src/: chat_sender.cpp  main.cpp  test_sender.cpp
kernel/src/ai/: inference_engine.cpp  tool_executor.cpp
kernel/src/ipc/: message_bus.cpp
kernel/src/vault/: vault_manager.cpp
modern_desktop/: __init__.py  main_window.py  theme.py  workers.py
packaging/: motherbrain_version_info.txt  occhialini_version_info.txt
scripts/: build_exe.ps1  generate_brand_assets.py  init_motherbrain.py
shell/: client_private.key  client_public.key  dataset_20260710_094416.jsonl  main.py  server_private.key  server_public.key  train.py
shell/training_output/: README.md
shell/unsloth_compiled_cache/: UnslothBCOTrainer.py  (+14 more)
templates/: web_companion.html
tests/: test_model_core.py  test_peer_auth.py  test_sync_protocol.py
tools/: __init__.py  system_agent.py
website/: README.md  index.html  script.js  styles.css
(+3 files in other folders)
